--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^7.0.2",
+    "prettier": "^3.3.3",
     "sass": "^1.81.0",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard-scss": "^13.1.0",
     "vite": "^5.4.11"
   },
   "peerDependencies": {
