--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "src"
   ],
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "docs:dev": "vite --config vite.config.docs.mjs",
+    "docs:build": "vite build --config vite.config.docs.mjs",
+    "docs:preview": "vite preview --config vite.config.docs.mjs",
     "prepare": "npm run build",
     "lint": "stylelint \"src/**/*.scss\"",
     "format": "prettier --write \"src/**/*.{scss,js,json}\"",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "cssnano": "^7.0.6",
+    "glob": "^11.0.0",
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
@@ -51,7 +54,9 @@
     "sass": "^1.81.0",
     "stylelint": "^16.10.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vite-plugin-html-inject": "^1.1.2",
+    "vite-plugin-static-copy": "^2.1.0"
   },
   "peerDependencies": {
     "sass": "^1.x"
