--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nuvoui/core",
   "version": "1.1.3",
-  "description": "NuvoUI Core SCSS Library",
+  "description": "NuvoUI is a human-friendly SCSS framework designed for simplicity, and modern responsive designs.",
   "main": "dist/nuvoui.css",
   "module": "src/styles/index.scss",
   "files": [
@@ -25,12 +25,18 @@
   "keywords": [
     "scss",
     "css",
+    "framework",
     "nuvoui",
     "ui-library",
     "design-system",
-    "frontend",
     "responsive",
-    "modern"
+    "animations",
+    "frontend",
+    "modern-ui",
+    "web-development",
+    "responsive-design",
+    "developer-friendly",
+    "mixins"
   ],
   "author": {
     "name": "AALA IT Solutions",
@@ -40,6 +46,7 @@
   "bugs": {
     "url": "https://github.com/NuvoUI/core/issues"
   },
+  "homepage": "https://nuvoui.io/",
   "publishConfig": {
     "access": "public"
   },
