--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": "stylelint-config-standard-scss",
+  "ignoreFiles": [
+    "src/styles/mixins-map.scss"
+  ],
   "rules": {
     "at-rule-empty-line-before": [
         "always",
